--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "@babel/core": "^7.20.2",
+    "@babel/core": "^7.20.5",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-typescript": "^7.18.6",
     "@types/fork-ts-checker-webpack-plugin": "^0.4.5",
@@ -27,6 +27,7 @@
     "style-loader": "^3.3.1",
     "tailwindcss": "^3.2.4",
     "ts-node": "^10.9.1",
+    "typescript": "^4.9.4",
     "webpack": "^5.75.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^5.0.0",
